src/features/ResultItem/components/ResultItem/ResultItem.module.scss
   @use "@/assets/styles/variables" as *;

.result {
  // display: grid;
  // grid-template-columns: 1fr 112px 110px 90px 90px 24px;
  // padding: $m $s $m 0;
  // column-gap: $s;
  padding: 0 0 $m 0;
  transition: $defaultAnim;
  background-color: $white;
  cursor: pointer;
  &:hover {
    background-color: $resultWhiteRowHover;
    .nameContainer span {
      text-decoration: underline;
    }
  }
  &:nth-child(even) {
    &.highlighted {
      background-color: $lightYellow;
    }
  }
  &:nth-child(odd) {
    &.highlighted {
      background-color: $yellow;
    }
  }
  &.pathfinder {
    grid-template-columns: 1fr 112px 110px 90px 24px;
    .accordionPanel {
      grid-column: 1/6;
    }
    .tags {
      display: none;
    }
    .accordionPanel {
      min-height: initial !important;
    }
  }
  .resultTabs {
    margin: $s auto $xs auto;
  }
  .description {
    margin: $xs 0 0 0;
    line-height: 1.3;
    font-size: $captionSize;
    a {
      color: $purpleOne;
      font-size: $captionSize;
      &:visited {
        color: $darkGray;
      }
    }
  }
  .resultSub {
    display: flex;
    align-items: flex-start;
  }
  .tags {
    margin: $xs 0 0;
    width: 90%;
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    &.more {
      position: relative;
      padding-right: $xs;
    }
    .hasMore {
        position: absolute;
        top: 4px;
        left: 100%;
        font-size: 12px;
        font-weight: 400;
        color: $purpleOne;
        white-space: nowrap;
        opacity: 1;
        transition: opacity .5s ease;
    }
  }
  .open .tags.more .hasMore {
    opacity: 0;
  }
  .tag {
    font-size: 12px;
    line-height: 1.25;
    font-weight: 800;
    background-color: transparent;
    box-shadow: none;
    color: $purpleTwo;
    border: 1px solid $purpleTwo;
    margin: 0;
    padding: 8px 8.5px;
    border-radius: $defaultBorderRadius;
    transition: $defaultAnim;
    opacity: 1 !important;
    white-space: nowrap;
    &:hover {
      box-shadow: none;
      text-decoration: underline;
      background-color: $purpleTwo;
      color: $white;
    }
    &.active {
      box-shadow: none;
      text-decoration: underline;
      background-color: $purpleTwo;
      color: $white;
    }
  }
  .checkboxContainer {
    display: none;
  }
  .nameContainer {
    display: flex;
    align-content: center;
    overflow: hidden;
    height: min-content;
    align-self: center;
    span {
      line-height: 1.25;
    }
    .icon {
      display: none;
    }
    .name {
      display: block;
    }
    .name, .name span, .name mark {
      color: $black;
      font-size: 20px;
      line-height: 25px;
      font-weight: 800;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      text-transform: none;
    }
  }
  .scoreNum, .pathsNum, .info {
    font-size: 12px;
    line-height: 1.25;
    color: $darkGray;
  }
  .fdaIcon {
    height: 24px;
    position: relative;
  }
  .evidenceContainer {    
    .evidenceLink {
      font-size: $bodyTwoSize;
      .viewAll {
        font-size: $bodyTwoSize;
        font-weight: 800;
        margin-bottom: 5px;
      }
      .info {
        display: block;
        margin-bottom: 2px;
      }
    }
  }
  .downloadButton {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    svg {
      height: 32px;
      width: 32px;
      transform: rotate(180deg);
    }
  }
  .shareResultIcon {
    box-shadow: none;
    margin: 0;
    width: 100%;
    svg {
      margin-right: 0;
      width: 24px;
      opacity: 1 !important;
    }
  }
  .accordionButton {
    box-shadow: none;
    background-color: transparent;
    margin: 0;
    width: 100%;
    padding: 0;
    svg {
      transition: transform .25s ease;
      margin-right: 0;
    }
    &:hover {
      box-shadow: none;
    }
    &.open {
      svg {
        transform: rotate(180deg);
      }
    }
  }
  .top {
    display: grid;
    grid-template-columns: 1fr 112px 110px 90px 90px 24px;
    column-gap: $s;
    padding: $m $s 0 $s;
  }
  .accordionPanel {
    grid-column: 1/7;
    grid-row: 2;
    padding: 0;
    .container, .resultTabs > div > div {
      padding: 0 $s;
    } 
    &.hasDescription, &.hasTags {
      min-height: 41px;
    }
    &.hasDescription.inUserSave {
      min-height: 48px;
    }
    &.hasDescription.hasTags {
      min-height: 81px;
    }
    &>div {
      display: block !important;
    }
    .container {
      max-width: calc(100% - 390px);
      p, p span, p mark {
        font-size: 12px;
      }
    }
  }
}

.pathsTabContent {
  overflow: auto;
}

